# Calibration_and_EMD

./: 1D_1p_1000_ver  1D_1p_1000_ver.stan  README.md  event_table.py  example.ipynb  fit_gmm.py  fitres_10_0_2_rep1.parquet  fitres_10_19_2_rep1.parquet  gmm_1D_3p  gmm_1D_3p.stan  gmm_1D_3p_1000  gmm_1D_3p_1000.stan  load_event_table.py  p.py  pyproject.toml  stan_load.py  standard_event_table_format.csv
.github/workflows/: python-versions.yml  python_versions.yml
src/: event_table.py  fit_gmm.py  fit_line.py  fitres_10_11_2_rep1.parquet  load_event_table.py  p.py  stan_load.py  standard_event_table_format.csv  standards_formats.txt  stuff.csv
tests/: check-references.py
