[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "your-project-name"
version = "0.1.0"
description = "BCI / stats / Stan analysis project"
readme = "README.md"
requires-python = ">=3.9"
authors = [
  { name = "Your Name", email = "you@example.com" }
]

dependencies = [
  "numpy",
  "scipy",
  "pandas",
  "matplotlib",
  "scikit-learn",
  "cmdstanpy",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "flake8",
]

[tool.setuptools.packages.find]
where = ["src"]