[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "Calibration and EMD"
version = "0.1.0"
description = "EMD and general statistical analysis"
readme = "README.md"
requires-python = ">=3.9"
authors = [
  { name = "Gleb Iagelskii, email = "gleb.iagelskii@icloud.com" }
]

dev = [
  "numpy",
  "scipy",
  "pandas",
  "matplotlib",
  "scikit-learn",
  "cmdstanpy",
  "pytest",
  "flake8",
  "black"
]


[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 120
target-version = ["py39", "py310", "py311"]

[tool.flake8]
max-line-length = 120
extend-ignore = ["E203", "W503"]